Fix double border-top in editor for Adv. Accordion body
#329

--- a/src/assets/css/blocks_styles/blocks.scss
+++ b/src/assets/css/blocks_styles/blocks.scss
@@ -115,6 +115,10 @@
     padding: 15px 0;
 }
 
+#editor .advgb-accordion-body {
+  border-top: none !important;
+}
+
 .advgb-accordion-header,
 .advgb-accordion-header.ui-accordion-header.ui-state-default {
     padding: 5px 40px 5px 10px;
